// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-upload"
      >
        <input
          class="om-react-ui-upload-input"
          type="file"
        />
        <button
          class="om-react-ui-button om-react-ui-button-primary om-react-ui-button-small"
          type="button"
        >
          <span
            class="om-react-ui-button-icon-start"
          >
            <i
              class="om-react-ui-icons-wrapper"
              style="display: inline-flex; align-items: center; justify-content: center; width: 16px; height: 16px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 16px; --icon-height: 16px;"
            >
              <svg
                class="om-react-ui-icons"
                fill="none"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                shape-rendering="geometricPrecision"
                stroke="none"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11 9V22.5H13V9H11Z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M12 10.4142L16.2929 14.7071L17.7071 13.2929L12 7.58577L6.29289 13.2929L7.7071 14.7071L12 10.4142Z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M12 4C9.78359 4 7.90155 5.44282 7.24685 7.44314L7.06981 7.98406L6.51433 8.10806C4.50286 8.55708 3 10.3542 3 12.5C3 14.9853 5.01472 17 7.5 17H9V19H7.5C3.91015 19 1 16.0899 1 12.5C1 9.59256 2.90804 7.13284 5.53951 6.30117C6.59566 3.77595 9.08929 2 12 2C14.9107 2 17.4043 3.77595 18.4605 6.30117C21.092 7.13285 23 9.59256 23 12.5C23 16.0899 20.0898 19 16.5 19H15V17H16.5C18.9853 17 21 14.9853 21 12.5C21 10.3542 19.4971 8.55708 17.4857 8.10806L16.9302 7.98406L16.7531 7.44314C16.0984 5.44282 14.2164 4 12 4Z"
                  fill-rule="evenodd"
                />
              </svg>
            </i>
          </span>
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-sm om-react-ui-typography-strong"
          >
            Upload file
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-upload"
    >
      <input
        class="om-react-ui-upload-input"
        type="file"
      />
      <button
        class="om-react-ui-button om-react-ui-button-primary om-react-ui-button-small"
        type="button"
      >
        <span
          class="om-react-ui-button-icon-start"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="display: inline-flex; align-items: center; justify-content: center; width: 16px; height: 16px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11 9V22.5H13V9H11Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M12 10.4142L16.2929 14.7071L17.7071 13.2929L12 7.58577L6.29289 13.2929L7.7071 14.7071L12 10.4142Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M12 4C9.78359 4 7.90155 5.44282 7.24685 7.44314L7.06981 7.98406L6.51433 8.10806C4.50286 8.55708 3 10.3542 3 12.5C3 14.9853 5.01472 17 7.5 17H9V19H7.5C3.91015 19 1 16.0899 1 12.5C1 9.59256 2.90804 7.13284 5.53951 6.30117C6.59566 3.77595 9.08929 2 12 2C14.9107 2 17.4043 3.77595 18.4605 6.30117C21.092 7.13285 23 9.59256 23 12.5C23 16.0899 20.0898 19 16.5 19H15V17H16.5C18.9853 17 21 14.9853 21 12.5C21 10.3542 19.4971 8.55708 17.4857 8.10806L16.9302 7.98406L16.7531 7.44314C16.0984 5.44282 14.2164 4 12 4Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </span>
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-sm om-react-ui-typography-strong"
        >
          Upload file
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Upload renders with label and description 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-upload"
      >
        <label
          class="om-react-ui-typography om-react-ui-typography-label om-react-ui-typography-label-lg om-react-ui-upload-label"
        >
          Upload Document
        </label>
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-md om-react-ui-upload-description"
        >
          Max 10MB
        </span>
        <input
          class="om-react-ui-upload-input"
          type="file"
        />
        <button
          class="om-react-ui-button om-react-ui-button-primary om-react-ui-button-small"
          type="button"
        >
          <span
            class="om-react-ui-button-icon-start"
          >
            <i
              class="om-react-ui-icons-wrapper"
              style="display: inline-flex; align-items: center; justify-content: center; width: 16px; height: 16px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 16px; --icon-height: 16px;"
            >
              <svg
                class="om-react-ui-icons"
                fill="none"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                shape-rendering="geometricPrecision"
                stroke="none"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11 9V22.5H13V9H11Z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M12 10.4142L16.2929 14.7071L17.7071 13.2929L12 7.58577L6.29289 13.2929L7.7071 14.7071L12 10.4142Z"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M12 4C9.78359 4 7.90155 5.44282 7.24685 7.44314L7.06981 7.98406L6.51433 8.10806C4.50286 8.55708 3 10.3542 3 12.5C3 14.9853 5.01472 17 7.5 17H9V19H7.5C3.91015 19 1 16.0899 1 12.5C1 9.59256 2.90804 7.13284 5.53951 6.30117C6.59566 3.77595 9.08929 2 12 2C14.9107 2 17.4043 3.77595 18.4605 6.30117C21.092 7.13285 23 9.59256 23 12.5C23 16.0899 20.0898 19 16.5 19H15V17H16.5C18.9853 17 21 14.9853 21 12.5C21 10.3542 19.4971 8.55708 17.4857 8.10806L16.9302 7.98406L16.7531 7.44314C16.0984 5.44282 14.2164 4 12 4Z"
                  fill-rule="evenodd"
                />
              </svg>
            </i>
          </span>
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-sm om-react-ui-typography-strong"
          >
            Upload file
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-upload"
    >
      <label
        class="om-react-ui-typography om-react-ui-typography-label om-react-ui-typography-label-lg om-react-ui-upload-label"
      >
        Upload Document
      </label>
      <span
        class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-md om-react-ui-upload-description"
      >
        Max 10MB
      </span>
      <input
        class="om-react-ui-upload-input"
        type="file"
      />
      <button
        class="om-react-ui-button om-react-ui-button-primary om-react-ui-button-small"
        type="button"
      >
        <span
          class="om-react-ui-button-icon-start"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="display: inline-flex; align-items: center; justify-content: center; width: 16px; height: 16px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11 9V22.5H13V9H11Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M12 10.4142L16.2929 14.7071L17.7071 13.2929L12 7.58577L6.29289 13.2929L7.7071 14.7071L12 10.4142Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M12 4C9.78359 4 7.90155 5.44282 7.24685 7.44314L7.06981 7.98406L6.51433 8.10806C4.50286 8.55708 3 10.3542 3 12.5C3 14.9853 5.01472 17 7.5 17H9V19H7.5C3.91015 19 1 16.0899 1 12.5C1 9.59256 2.90804 7.13284 5.53951 6.30117C6.59566 3.77595 9.08929 2 12 2C14.9107 2 17.4043 3.77595 18.4605 6.30117C21.092 7.13285 23 9.59256 23 12.5C23 16.0899 20.0898 19 16.5 19H15V17H16.5C18.9853 17 21 14.9853 21 12.5C21 10.3542 19.4971 8.55708 17.4857 8.10806L16.9302 7.98406L16.7531 7.44314C16.0984 5.44282 14.2164 4 12 4Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </span>
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-sm om-react-ui-typography-strong"
        >
          Upload file
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UploadFileBar renders error state with message 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-upload-file-bar om-react-ui-upload-file-bar-failure"
      >
        <div
          class="om-react-ui-upload-file-bar-inner"
        >
          <i
            class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-file"
            style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 20px; --icon-height: 20px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="20"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6 3C5.44772 3 5 3.44772 5 4V20C5 20.5523 5.44772 21 6 21H18C18.5523 21 19 20.5523 19 20V10H14C12.8954 10 12 9.10457 12 8V3H6ZM14 4.41421L17.5858 8H14V4.41421ZM3 4C3 2.34315 4.34315 1 6 1H13.4142L21 8.58579V20C21 21.6569 19.6569 23 18 23H6C4.34315 23 3 21.6569 3 20V4Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-md om-react-ui-typography-strong om-react-ui-upload-file-bar-name"
          >
            test.pdf
          </span>
          <i
            class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-status"
            style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgba(174, 0, 0, 0.102); font-style: normal; --icon-color: #AE00001A; --icon-width: 20px; --icon-height: 20px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="20"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 22 22"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11 0C17.0751 0 22 4.92487 22 11C22 17.0751 17.0751 22 11 22C4.92487 22 0 17.0751 0 11C0 4.92487 4.92487 0 11 0ZM11 13.5C10.1716 13.5 9.5 14.1716 9.5 15C9.5 15.8284 10.1716 16.5 11 16.5C11.8284 16.5 12.5 15.8284 12.5 15C12.5 14.1716 11.8284 13.5 11 13.5ZM10 5.5V12H12V5.5H10Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M10 12V5.5H12V12H10Z"
                fill="#AE0000"
                fill-rule="evenodd"
              />
              <path
                d="M12.5 15C12.5 15.8284 11.8284 16.5 11 16.5C10.1716 16.5 9.5 15.8284 9.5 15C9.5 14.1716 10.1716 13.5 11 13.5C11.8284 13.5 12.5 14.1716 12.5 15Z"
                fill="#AE0000"
              />
            </svg>
          </i>
          <div
            class="om-react-ui-upload-file-bar-message"
          >
            <i
              class="om-react-ui-icons-wrapper"
              style="display: inline-flex; align-items: center; justify-content: center; width: 16px; height: 16px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 16px; --icon-height: 16px;"
            >
              <svg
                class="om-react-ui-icons"
                fill="none"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                shape-rendering="geometricPrecision"
                stroke="none"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.0002 14V7.49998H13.0002V14H11.0002Z"
                  fill-rule="evenodd"
                />
                <path
                  d="M13.5002 17C13.5002 17.8284 12.8286 18.5 12.0002 18.5C11.1718 18.5 10.5002 17.8284 10.5002 17C10.5002 16.1715 11.1718 15.5 12.0002 15.5C12.8286 15.5 13.5002 16.1715 13.5002 17Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.2256 16.7674L4.40106 20H19.5994L20.7748 16.7674L12.0002 3.60553L3.2256 16.7674ZM13.6643 2.49613C12.8727 1.30866 11.1277 1.30866 10.3361 2.49613L1.5615 15.658C1.2086 16.1874 1.1286 16.853 1.34601 17.4509L2.52147 20.6835C2.80889 21.4738 3.56005 22 4.40106 22H19.5994C20.4404 22 21.1915 21.4738 21.4789 20.6835L22.6544 17.4509C22.8718 16.853 22.7918 16.1874 22.4389 15.658L13.6643 2.49613Z"
                  fill-rule="evenodd"
                />
              </svg>
            </i>
            <span
              class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-sm"
            >
              Upload failed
            </span>
          </div>
        </div>
        <button
          aria-label="Remove file"
          class="om-react-ui-button om-react-ui-button-white om-react-ui-button-small om-react-ui-upload-file-bar-icon-remove"
          type="button"
        >
          <span
            class="om-react-ui-button-icon-start"
          >
            <i
              class="om-react-ui-icons-wrapper"
              style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 20px; --icon-height: 20px;"
            >
              <svg
                class="om-react-ui-icons"
                fill="none"
                height="20"
                preserveAspectRatio="xMidYMid meet"
                shape-rendering="geometricPrecision"
                stroke="none"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.5001 4.5H16.8751V3.375C16.8751 2.67881 16.5985 2.01113 16.1063 1.51884C15.614 1.02656 14.9463 0.75 14.2501 0.75H9.7501C9.05391 0.75 8.38623 1.02656 7.89395 1.51884C7.40167 2.01113 7.1251 2.67881 7.1251 3.375V4.5H2.5V6.75H4.1251V19.5C4.1251 19.9973 4.32265 20.4742 4.67428 20.8258C5.02591 21.1775 5.50282 21.375 6.0001 21.375H18.0001C18.4974 21.375 18.9743 21.1775 19.3259 20.8258C19.6776 20.4742 19.8751 19.9973 19.8751 19.5V6.75H21.5001V4.5ZM9.3751 3.375C9.3751 3.27554 9.41461 3.18016 9.48494 3.10984C9.55527 3.03951 9.65065 3 9.7501 3H14.2501C14.3496 3 14.4449 3.03951 14.5153 3.10984C14.5856 3.18016 14.6251 3.27554 14.6251 3.375V4.5H9.3751V3.375ZM17.6251 19.125H6.3751V6.75H17.6251V19.125ZM10.8751 8.94057V17.1906H8.6251V8.94057H10.8751ZM15.3751 8.94057V17.1906H13.1251V8.94057H15.3751Z"
                />
              </svg>
            </i>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-upload-file-bar om-react-ui-upload-file-bar-failure"
    >
      <div
        class="om-react-ui-upload-file-bar-inner"
      >
        <i
          class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-file"
          style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 20px; --icon-height: 20px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            shape-rendering="geometricPrecision"
            stroke="none"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6 3C5.44772 3 5 3.44772 5 4V20C5 20.5523 5.44772 21 6 21H18C18.5523 21 19 20.5523 19 20V10H14C12.8954 10 12 9.10457 12 8V3H6ZM14 4.41421L17.5858 8H14V4.41421ZM3 4C3 2.34315 4.34315 1 6 1H13.4142L21 8.58579V20C21 21.6569 19.6569 23 18 23H6C4.34315 23 3 21.6569 3 20V4Z"
              fill-rule="evenodd"
            />
          </svg>
        </i>
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-md om-react-ui-typography-strong om-react-ui-upload-file-bar-name"
        >
          test.pdf
        </span>
        <i
          class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-status"
          style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgba(174, 0, 0, 0.102); font-style: normal; --icon-color: #AE00001A; --icon-width: 20px; --icon-height: 20px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            shape-rendering="geometricPrecision"
            stroke="none"
            viewBox="0 0 22 22"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11 0C17.0751 0 22 4.92487 22 11C22 17.0751 17.0751 22 11 22C4.92487 22 0 17.0751 0 11C0 4.92487 4.92487 0 11 0ZM11 13.5C10.1716 13.5 9.5 14.1716 9.5 15C9.5 15.8284 10.1716 16.5 11 16.5C11.8284 16.5 12.5 15.8284 12.5 15C12.5 14.1716 11.8284 13.5 11 13.5ZM10 5.5V12H12V5.5H10Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M10 12V5.5H12V12H10Z"
              fill="#AE0000"
              fill-rule="evenodd"
            />
            <path
              d="M12.5 15C12.5 15.8284 11.8284 16.5 11 16.5C10.1716 16.5 9.5 15.8284 9.5 15C9.5 14.1716 10.1716 13.5 11 13.5C11.8284 13.5 12.5 14.1716 12.5 15Z"
              fill="#AE0000"
            />
          </svg>
        </i>
        <div
          class="om-react-ui-upload-file-bar-message"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="display: inline-flex; align-items: center; justify-content: center; width: 16px; height: 16px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.0002 14V7.49998H13.0002V14H11.0002Z"
                fill-rule="evenodd"
              />
              <path
                d="M13.5002 17C13.5002 17.8284 12.8286 18.5 12.0002 18.5C11.1718 18.5 10.5002 17.8284 10.5002 17C10.5002 16.1715 11.1718 15.5 12.0002 15.5C12.8286 15.5 13.5002 16.1715 13.5002 17Z"
              />
              <path
                clip-rule="evenodd"
                d="M3.2256 16.7674L4.40106 20H19.5994L20.7748 16.7674L12.0002 3.60553L3.2256 16.7674ZM13.6643 2.49613C12.8727 1.30866 11.1277 1.30866 10.3361 2.49613L1.5615 15.658C1.2086 16.1874 1.1286 16.853 1.34601 17.4509L2.52147 20.6835C2.80889 21.4738 3.56005 22 4.40106 22H19.5994C20.4404 22 21.1915 21.4738 21.4789 20.6835L22.6544 17.4509C22.8718 16.853 22.7918 16.1874 22.4389 15.658L13.6643 2.49613Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-sm"
          >
            Upload failed
          </span>
        </div>
      </div>
      <button
        aria-label="Remove file"
        class="om-react-ui-button om-react-ui-button-white om-react-ui-button-small om-react-ui-upload-file-bar-icon-remove"
        type="button"
      >
        <span
          class="om-react-ui-button-icon-start"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 20px; --icon-height: 20px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="20"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.5001 4.5H16.8751V3.375C16.8751 2.67881 16.5985 2.01113 16.1063 1.51884C15.614 1.02656 14.9463 0.75 14.2501 0.75H9.7501C9.05391 0.75 8.38623 1.02656 7.89395 1.51884C7.40167 2.01113 7.1251 2.67881 7.1251 3.375V4.5H2.5V6.75H4.1251V19.5C4.1251 19.9973 4.32265 20.4742 4.67428 20.8258C5.02591 21.1775 5.50282 21.375 6.0001 21.375H18.0001C18.4974 21.375 18.9743 21.1775 19.3259 20.8258C19.6776 20.4742 19.8751 19.9973 19.8751 19.5V6.75H21.5001V4.5ZM9.3751 3.375C9.3751 3.27554 9.41461 3.18016 9.48494 3.10984C9.55527 3.03951 9.65065 3 9.7501 3H14.2501C14.3496 3 14.4449 3.03951 14.5153 3.10984C14.5856 3.18016 14.6251 3.27554 14.6251 3.375V4.5H9.3751V3.375ZM17.6251 19.125H6.3751V6.75H17.6251V19.125ZM10.8751 8.94057V17.1906H8.6251V8.94057H10.8751ZM15.3751 8.94057V17.1906H13.1251V8.94057H15.3751Z"
              />
            </svg>
          </i>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UploadFileBar renders success state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-upload-file-bar om-react-ui-upload-file-bar-success"
      >
        <div
          class="om-react-ui-upload-file-bar-inner"
        >
          <i
            class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-file"
            style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 20px; --icon-height: 20px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="20"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6 3C5.44772 3 5 3.44772 5 4V20C5 20.5523 5.44772 21 6 21H18C18.5523 21 19 20.5523 19 20V10H14C12.8954 10 12 9.10457 12 8V3H6ZM14 4.41421L17.5858 8H14V4.41421ZM3 4C3 2.34315 4.34315 1 6 1H13.4142L21 8.58579V20C21 21.6569 19.6569 23 18 23H6C4.34315 23 3 21.6569 3 20V4Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
          <span
            class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-md om-react-ui-typography-strong om-react-ui-upload-file-bar-name"
          >
            test.pdf
          </span>
          <i
            class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-status"
            style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgba(31, 88, 0, 0.2); font-style: normal; --icon-color: #1F580033; --icon-width: 20px; --icon-height: 20px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="20"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 22 22"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11 0C17.0751 0 22 4.92487 22 11C22 17.0751 17.0751 22 11 22C4.92487 22 0 17.0751 0 11C0 4.92487 4.92487 0 11 0ZM10.1992 12.3398L7.11426 9.32715L5.7168 10.7578L10.2373 15.1719L16.8418 8.37012L15.4072 6.97656L10.1992 12.3398Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M16.8417 8.36972L10.2374 15.1716L5.71699 10.7579L7.11423 9.32687L10.1996 12.3395L15.4068 6.97651L16.8417 8.36972Z"
                fill="#1F5800"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </div>
        <button
          aria-label="Remove file"
          class="om-react-ui-button om-react-ui-button-white om-react-ui-button-small om-react-ui-upload-file-bar-icon-remove"
          type="button"
        >
          <span
            class="om-react-ui-button-icon-start"
          >
            <i
              class="om-react-ui-icons-wrapper"
              style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 20px; --icon-height: 20px;"
            >
              <svg
                class="om-react-ui-icons"
                fill="none"
                height="20"
                preserveAspectRatio="xMidYMid meet"
                shape-rendering="geometricPrecision"
                stroke="none"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.5001 4.5H16.8751V3.375C16.8751 2.67881 16.5985 2.01113 16.1063 1.51884C15.614 1.02656 14.9463 0.75 14.2501 0.75H9.7501C9.05391 0.75 8.38623 1.02656 7.89395 1.51884C7.40167 2.01113 7.1251 2.67881 7.1251 3.375V4.5H2.5V6.75H4.1251V19.5C4.1251 19.9973 4.32265 20.4742 4.67428 20.8258C5.02591 21.1775 5.50282 21.375 6.0001 21.375H18.0001C18.4974 21.375 18.9743 21.1775 19.3259 20.8258C19.6776 20.4742 19.8751 19.9973 19.8751 19.5V6.75H21.5001V4.5ZM9.3751 3.375C9.3751 3.27554 9.41461 3.18016 9.48494 3.10984C9.55527 3.03951 9.65065 3 9.7501 3H14.2501C14.3496 3 14.4449 3.03951 14.5153 3.10984C14.5856 3.18016 14.6251 3.27554 14.6251 3.375V4.5H9.3751V3.375ZM17.6251 19.125H6.3751V6.75H17.6251V19.125ZM10.8751 8.94057V17.1906H8.6251V8.94057H10.8751ZM15.3751 8.94057V17.1906H13.1251V8.94057H15.3751Z"
                />
              </svg>
            </i>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-upload-file-bar om-react-ui-upload-file-bar-success"
    >
      <div
        class="om-react-ui-upload-file-bar-inner"
      >
        <i
          class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-file"
          style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 20px; --icon-height: 20px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            shape-rendering="geometricPrecision"
            stroke="none"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6 3C5.44772 3 5 3.44772 5 4V20C5 20.5523 5.44772 21 6 21H18C18.5523 21 19 20.5523 19 20V10H14C12.8954 10 12 9.10457 12 8V3H6ZM14 4.41421L17.5858 8H14V4.41421ZM3 4C3 2.34315 4.34315 1 6 1H13.4142L21 8.58579V20C21 21.6569 19.6569 23 18 23H6C4.34315 23 3 21.6569 3 20V4Z"
              fill-rule="evenodd"
            />
          </svg>
        </i>
        <span
          class="om-react-ui-typography om-react-ui-typography-body om-react-ui-typography-body-md om-react-ui-typography-strong om-react-ui-upload-file-bar-name"
        >
          test.pdf
        </span>
        <i
          class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-status"
          style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgba(31, 88, 0, 0.2); font-style: normal; --icon-color: #1F580033; --icon-width: 20px; --icon-height: 20px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            shape-rendering="geometricPrecision"
            stroke="none"
            viewBox="0 0 22 22"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11 0C17.0751 0 22 4.92487 22 11C22 17.0751 17.0751 22 11 22C4.92487 22 0 17.0751 0 11C0 4.92487 4.92487 0 11 0ZM10.1992 12.3398L7.11426 9.32715L5.7168 10.7578L10.2373 15.1719L16.8418 8.37012L15.4072 6.97656L10.1992 12.3398Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M16.8417 8.36972L10.2374 15.1716L5.71699 10.7579L7.11423 9.32687L10.1996 12.3395L15.4068 6.97651L16.8417 8.36972Z"
              fill="#1F5800"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </div>
      <button
        aria-label="Remove file"
        class="om-react-ui-button om-react-ui-button-white om-react-ui-button-small om-react-ui-upload-file-bar-icon-remove"
        type="button"
      >
        <span
          class="om-react-ui-button-icon-start"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: currentColor; font-style: normal; --icon-color: currentColor; --icon-width: 20px; --icon-height: 20px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="20"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.5001 4.5H16.8751V3.375C16.8751 2.67881 16.5985 2.01113 16.1063 1.51884C15.614 1.02656 14.9463 0.75 14.2501 0.75H9.7501C9.05391 0.75 8.38623 1.02656 7.89395 1.51884C7.40167 2.01113 7.1251 2.67881 7.1251 3.375V4.5H2.5V6.75H4.1251V19.5C4.1251 19.9973 4.32265 20.4742 4.67428 20.8258C5.02591 21.1775 5.50282 21.375 6.0001 21.375H18.0001C18.4974 21.375 18.9743 21.1775 19.3259 20.8258C19.6776 20.4742 19.8751 19.9973 19.8751 19.5V6.75H21.5001V4.5ZM9.3751 3.375C9.3751 3.27554 9.41461 3.18016 9.48494 3.10984C9.55527 3.03951 9.65065 3 9.7501 3H14.2501C14.3496 3 14.4449 3.03951 14.5153 3.10984C14.5856 3.18016 14.6251 3.27554 14.6251 3.375V4.5H9.3751V3.375ZM17.6251 19.125H6.3751V6.75H17.6251V19.125ZM10.8751 8.94057V17.1906H8.6251V8.94057H10.8751ZM15.3751 8.94057V17.1906H13.1251V8.94057H15.3751Z"
              />
            </svg>
          </i>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
